Fixed the issue where the loader was not aligned in the centre in the my sketches modal

--- a/client/styles/components/_loader.scss
+++ b/client/styles/components/_loader.scss
@@ -3,6 +3,7 @@
 	height: #{80 /  $base-font-size}rem;
 
 	position: relative;
+	top: 21%;
 	margin: #{100 /  $base-font-size}rem auto;
 }
 
